fix(tp): alignment for link

--- a/public/assets/transition-page/styles/transition-page.css
+++ b/public/assets/transition-page/styles/transition-page.css
@@ -181,8 +181,8 @@ button {
 .links {
   width: 100%;
   height: 140px;
-  padding-top: 72px;
-  padding-left: 148px;
+  padding-top: 75px;
+  padding-left: 165px;
   color: #000000;
 }
 
@@ -229,7 +229,7 @@ button {
 
   .links {
     padding-top: 73px;
-    padding-left: 120px;
+    padding-left: 115px;
     font-size: 12px;
     height: 120px;
   }
@@ -265,7 +265,7 @@ button {
 
   .links {
     padding-top: 73px;
-    padding-left: 120px;
+    padding-left: 115px;
     font-size: 12px;
   }
 }
